now including macro ViewIssueMacro for view/edit issue code.

--- a/src/templates/screens/ViewIssue.vm
+++ b/src/templates/screens/ViewIssue.vm
@@ -2,401 +2,28 @@
 #set ( $currentIssueId = $data.Parameters.getString("id") )
 #set ( $currentIssue = $scarabR.getIssue($currentIssueId) )
 
+
 #if ($currentIssue)
     #set ($attrValues = $currentIssue.ModuleAttributeValuesMap)
 #set ($user = $scarabR.User)
+#set ($module = $user.CurrentModule)
 
+ $security.hasPermission("Issue | Edit", $module) 
+#if ( $security.hasPermission("Issue | Edit", $module) )
+  #set ( $canEdit = true )
+#else
+  #set ( $canEdit = true)
+#end
+
+$user
+$user.UserId
 
 <form name="IssueForm" method="post" action="$action" >
 <input type="hidden" name="id" value="$currentIssue.IssueId">
 <input type="hidden" name="user_id" value="$user.UserId">
-#set($attVal =  $attrValues.get("DESCRIPTION"))
-#set ( $attrInput = $intake.AttributeValue.mapTo($attVal) ) 
- 
-      <p>&#171; previous | 1 of 3 | <a href="#">next</a> <a href="#">&#187;</a></p>
 
-	  <p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" /></p>
+ #viewIssue( $currentIssue )
 
-      <div class="grouper">
-       #datatitle ("Issue ID #$currentIssue.UniqueId")
-
-      <div class="axial">
-       <table width="100%" cellpadding="3" cellspacing="2" border="1">
-        <tr>
-         <th width="120">issue id #:</th>
-         <td>#$currentIssue.UniqueId</td>
-        </tr>
-
-#foreach ( $attKey in $attrValues.sequence() )
-  #set ( $attVal = $attrValues.get($attKey))
-  #set ( $attrInput = $intake.AttributeValue.mapTo($attVal) ) 
-
-
-  #if ( $attVal.Attribute.AttributeType.ValidationKey )
-        #set ( $field = $attVal.Attribute.AttributeType.ValidationKey )
-  #elseif ($attVal.Attribute.AttributeType.Name == "combo-box" )
-        #set ( $field = "OptionId" )
-  #else
-        #set ( $field = "Value" )  
-  #end
-
-         <tr>
-          <th width="120">$attVal.Attribute.Name:</th>
-          <td>
-
-    #if ($attVal.Attribute.AttributeType.AttributeClass.Name == "user")
-          #attrValueErrorMsg ( $attVal $field )
-       #userSelectBox ($attVal "")
-    #elseif ($attVal.Attribute.AttributeType.Name == "combo-box" )
-          #attrValueLeafSelect ($attVal $field "")
-          #attrValueErrorMsg ( $attVal $field )
-    #else
-         #attrValueErrorMsg( $attVal "Value" )
-        #if ($attVal.Attribute.AttributeType.Name == "long-string" )        
-            <textarea name="$attrInput.Value.Key" cols="40" 
-               rows="5">$!attrInput.Value</textarea>
-        #else
-
-           <input name= "$attrInput.Value.Key"
-                value="$!attrInput.Value" size="20" type="text">
-
-        #end
-    #end
-          </td>
-         </tr>
-  #end
-
-         <tr>
-           <td colspan="2">Please add a comment to explain your change(s):
-           <BR>
-        #set( $attCommentGroup = $intake.Attachment.setKey("attCommentKey") )
-         #fieldErrorMsg($attCommentGroup.DataAsString "<br>")
-           <textarea rows="4" cols="35" class="text" name ="$attCommentGroup.DataAsString.Key"></textarea>
-           <input type="hidden" name="$attCommentGroup.Name.Key" value="comment">
-           </td>
-        </tr>
-        <tr>
-           <td colspan="2"><input type="submit" value="edit attributes" name="eventSubmit_doSubmitattributes" /></td>
-         </tr>
-        </table>
-       </div>
-      </div>
-
-### ASSIGNEES
-
-      <h3>personnel</h3>
-
-      <div class="axial">
-       <table width="100%" cellpadding="3" cellspacing="2" border="1">
-        <tr>
-         <th width="120">committed by:</th>
-        #set ($createdUser = $scarabR.getUser($currentIssue.CreatedBy.toString()) )
-         <td><a href="mailTo:$createdUser.Email">$createdUser.UserName</a></td>
-        </tr>
-
-        <tr>
-         <th width="120">assignee(s):</th>
-         <td> 
-        #foreach ($ass in $currentIssue.AssigneeAttributeValues)
-          #if( $velocityCount == $currentIssue.AssigneeAttributeValues.size() )
-              #set( $comma = "")
-          #else 
-              #set( $comma = ",")
-          #end
-          #set ($assignedUser = $scarabR.getUser($ass.UserId.toString()) )
-          <a href="mailto:$assignedUser.Email">$assignedUser.UserName</a>$comma
-        #end
-          <p><input type="submit" value="edit assignees" name="eventSubmit_doEditassignees" /></p>
-         </td>
-        </tr>
-       </table>
-      </div>
-
-## URLS
-      <div class="grouper">
-       #datatitle ("Related Links")
-
-       <div class="datatable">
-        <table width="100%" border="1" cellspacing="2" cellpadding="3">
-         <tr>
-          <th><img src="/scarab/images/icon_uparrow.gif" width="13" height="8" alt="sort" border="0" /><img src="/scarab/images/icon_downarrow.gif" width="13" height="8" alt="sort" border="0" /></th>
-
-          <th>URL:</th>
-
-          <th>Description:</th>
-         </tr>
-
-    #foreach($url in $currentIssue.Urls)
-         #if( $velocityCount % 2 > 0 )
-            <tr class="a">
-         #else 
-            <tr class="b">
-         #end
-          <td><input type="checkbox" name="url_delete_$url.AttachmentId"/></td>
-
-          <td><input type="text" size="25" class="text" value="$url.DataAsString" /> </td>
-
-          <td><input type="text" size="25" class="text" value="$url.Name" /></td>
-         </tr>
-    #end
-         <tr>
-          <td><strong>add url:</strong></td>
-
-#set( $urlGroup = $intake.Attachment.setKey("urlKey") )
-          <td>
-         #fieldErrorMsg($urlGroup.Name "<br>")
-         <input type="text" size="25" class="text" name="$urlGroup.DataAsString.Key" value="$!urlGroup.DataAsString" />
-         </td>
-
-          <td>
-         #fieldErrorMsg($urlGroup.DataAsString "<br>")
-         <input type="text" size="25" class="text" name="$urlGroup.Name.Key" value="$!urlGroup.Name"/>
-          </td>
-
-         </tr>
-
-        </table>
-       </div>
-           <p><input type="submit" value="add url" name="eventSubmit_doSubmiturl"  />&#160;<input type="submit" value="delete url"  name="eventSubmit_doDeleteurl" /></p>
-
-
-## ADD DEPENDENCY
-<div class="grouper">
-
-#set( $dependGroup = $intake.Depend.setKey("dependKey") )
-<input type="hidden" name="$dependGroup.ObserverId.Key" value="$currentIssue.IssueId">
-
-#datatitle ("Add Dependency")
-
-<div class="datatable">
-<table width="100%" border="1" cellspacing="2" cellpadding="3">
- #if (!$dependGroup.ObservedId.Message.equals(""))
- <tr>
-   <td colspan="2" class="alert">$dependGroup.ObservedId.Message</td>
- </tr>
- #end
- #if (!$dependGroup.TypeId.Message.equals(""))
- <tr>
-   <td colspan="2" class="alert">$dependGroup.TypeId.Message</td>
- </tr>
- #end
- <tr>
-  <td>Add dependency on issue #</td>
-  <td valign="top"><input type="text" size="3" class="text" name="$dependGroup.ObservedId.Key" value = "$!dependGroup.ObservedId"></td>
-  <td valign="top"><select name="$dependGroup.TypeId.Key" class="select">
-    <option value="0">Choose dependency type</option>
-    #foreach ($dependType in $currentIssue.getAllDependencyTypes())
-      <option value="$dependType.DependTypeId">
-          $dependType.Name</option>
-    #end
-  </select>
-    </td>
- </tr>
-</table>
-       <p><input type="submit" value="add dependency"  name="eventSubmit_doAdddependency" />
-</div>
-
-
-## PARENT ISSUES
-#if (!$currentIssue.Parents.isEmpty() )
-
-      <div class="grouper">
-       #datatitle ("Parent Issues")
-
-       <div class="datatable">
-        <table width="100%" border="1" cellspacing="2" cellpadding="3">
-         <tr>
-
-          <th width="20%">issue id#:</th>
-
-          <th width="40%">issue summary:</th>
-
-          <th>dependency type:</th>
-         </tr>
-
-       #foreach( $parent in $currentIssue.Parents )
-         #if( $velocityCount % 2 > 0 )
-            <tr class="a">
-         #else 
-            <tr class="b">
-         #end
-          <td><a href="IssueView.vm?id=$parent.IssueId">$parent.IssueId</a></td>
-
-          <td><a href="IssueView.vm?id=$parent.IssueId">
-             #set ($parentAttrValues = $parent.AllAttributeValuesMap)
-             #set($attVal =  $parentAttrValues.get("SUMMARY"))
-             #set ( $attrInput = $intake.AttributeValue.mapTo($attVal) )
-           $attVal.Value</a></td>
-
-          <td>
-        <select name="parent_depend_type_id_$parent.IssueId" class="select">
-            #foreach ($dependType in $currentIssue.getAllDependencyTypes())
-              #set ( $selected = "" )
-              #if ( $parent.getDependency($currentIssue).TypeId.toString().equals($dependType.DependTypeId.toString()))
-                #set ( $selected = " selected" )
-              #end
-              <option$selected value="$dependType.DependTypeId">
-                  $dependType.Name</option>
-            #end
-              <option value="none">remove dependency </option>
-        </select>
-          </td>
-         </tr>
-       #end
-
-        </table>
-
-       <p><input type="submit"  name="eventSubmit_doUpdateparent" value="update parent issue" />
-       </div>
-      </div>
-#end
-
-
-## CHILD ISSUES
-#if (!$currentIssue.Children.isEmpty() )
-      <div class="grouper">
-       #datatitle ("Child Issues")
-
-       <div class="datatable">
-        <table width="100%" border="1" cellspacing="2" cellpadding="3">
-         <tr>
-
-          <th width="20%">issue id#:</th>
-
-          <th width="40%">issue summary:</th>
-
-          <th>dependency type:</th>
-         </tr>
-
-       #foreach( $child in $currentIssue.Children )
-         #if( $velocityCount % 2 > 0 )
-            <tr class="a">
-         #else 
-            <tr class="b">
-         #end
-
-          <td><a href="IssueView.vm?id=$child.IssueId">$child.IssueId</a></td>
-
-          <td><a href="IssueView.vm?id=$child.IssueId">
-             #set ($childAttrValues = $child.AllAttributeValuesMap)
-             #set($attVal =  $childAttrValues.get("SUMMARY"))
-             #set ( $attrInput = $intake.AttributeValue.mapTo($attVal) )
-           $attVal.Value</a></td>
-
-           <td>
-            <select name="child_depend_type_id_$child.IssueId" class="select">
-            <option>Choose dependency type</option>
-            #foreach ($dependType in $currentIssue.getAllDependencyTypes())
-              #set ( $selected = "" )
-              #if ( $currentIssue.getDependency($child).TypeId.toString().equals($dependType.DependTypeId.toString()) )
-                #set ( $selected = " selected" )
-              #end
-              <option$selected value="$dependType.DependTypeId">
-                  $dependType.Name</option>
-            #end
-            <option value="none">remove dependency </option>
-        </select>
-          </td>
-         </tr>
-       #end
-
-        </table>
-
-       <p><input type="submit" value="update child issue"  name="eventSubmit_doUpdatechild" />
-       </div>
-      </div>
-#end
-
-
-## COMMENTS
-      <div class="grouper">
-       #datatitle ("Comments")
-       
-       <div class="listtable">
-        <table width="100%" cellpadding="3" cellspacing="2" border="1">
-    #foreach($comment in $currentIssue.Comments)
-         <tr>
-          <td width="120" class="a">
-           #if( $comment.ModifiedBy && $commentModifiedDate)
-            #set ( $email = $comment.ScarabUserRelatedByModifiedBy.Email )
-            <strong>$comment.ModifiedDate <a href="mailto:$email">$email</a></strong></td>
-           #end
-          </td>
-
-          <td class="b"><textarea rows="2" cols="35" class="text">$comment.DataAsString</textarea></td>
-         </tr>
-    #end
-
-         <tr>
-          <td width="120" class="a"><strong>add comment:</strong></td>
-          <td class="b">
-        #set( $commentGroup = $intake.Attachment.setKey("commentKey") )
-        #fieldErrorMsg($commentGroup.DataAsString "<br>")
-           <textarea rows="2" cols="35" class="text" name ="$commentGroup.DataAsString.Key"></textarea>
-           <input type="hidden" name="$commentGroup.Name.Key" value="comment">
-           <p><input type="submit" value="add comment" name="eventSubmit_doSubmitcomment"  /></p>
-          </td>
-         </tr>
-        </table>
-       </div>
-      </div>
-
-
-## ISSUE HISTORY
-      <div class="grouper">
-       #datatitle ("Issue History (up to first ten)")
-
-       <div class="datatable">
-        <table width="100%" cellpadding="3" cellspacing="2" border="1">
-         <tr>
-          <th width="120"><strong>date stamp:</strong></th>
-
-          <th><strong>action:</strong></th>
-
-          <th><strong>note:</strong></th>
-         </tr>
-
-       #foreach( $activity in $currentIssue.Activity )
-         #if( $velocityCount % 2 > 0 )
-            <tr class="a">
-         #else 
-            <tr class="b">
-         #end
-          <td width="120">
-            #if( $activity.Transaction)
-              $activity.Transaction.CreatedDate
-            #end
-          </td>
-      #if ( $activity.Attribute.AttributeType.Name.equals("long-string") || $activity.Attribute.AttributeType.Name.equals("string") )
-          <td width="120">changed $activity.Attribute.Name</td>
-      #else
-          <td width="120">changed $activity.Attribute.Name 
-          #if (!$activity.OldValue.equals(""))
-            from $activity.OldAttributeOption.Name
-          #end
-            to $activity.NewAttributeOption.Name</td>
-      #end
-          <td>$activity.Attachment.DataAsString</td>
-         </tr>
-       #end
-
-        </table>
-       </div>
-      </div>
-
-      <p>view complete history</p>
-
-      <p><input type="submit" value="submit append" />&#160;<input type="submit" value="cancel" />&#160;<input type="reset" value="reset" /></p>
-
-      <div class="grouper">
-        <div class="functnbar">
-           <table width="100%" cellpadding="3" cellspacing="2" border="1">
-            <tr>
-             <td><input type="submit" value="previous" class="buttonfunc" />&#160;<input type="submit" value="next" class="buttonfunc" />&#160;issues | 3 of 5</td>
-            </tr>
-           </table>
-       </div>
-      </div>
 $intake.declareGroups()
 </form>
 
