fixed bug in child issue widget

--- a/src/templates/ViewIssueMacro.vm
+++ b/src/templates/ViewIssueMacro.vm
@@ -260,7 +260,7 @@
               <option value="none">remove dependency </option>
         </select>
    #else
-         $parent.getDependency(currentIssue).DependencyType.Name
+         $parent.getDependency($currentIssue).DependType.Name
    #end
           </td>
          </tr>
