--- a/src/templates/screens/IssueList.vm
+++ b/src/templates/screens/IssueList.vm
@@ -14,9 +14,10 @@
 <form name="IssueListForm" action="$action" method="post">
 <input type="hidden" name="queryString" value="$queryString">
 
-<p class="functnbar"><input type="submit" value="view selected (verbose)" />&#160;<input type="submit" value="view all (verbose)" /></p>
 
-<p class="functnbar"><input type="submit" value="reassign selected" />&#160;<sup>|</sup>&#160;<input type="submit" value="reassign all" />&#160;<sup>|</sup>&#160;<input type="submit" value="save query" name="eventSubmit_doSavequery" /></p>
+<p class="functnbar"><input type="submit" value="view selected (verbose)" name="eventSubmit_doViewselected" name="eventSubmit_doViewselected" />&#160;<input type="submit" value="view all (verbose)" name="eventSubmit_doViewall" /></p>
+
+<p class="functnbar"><input type="submit" value="reassign selected" name="eventSubmit_doReassignselected" />&#160;<sup>|</sup>&#160;<input type="submit" value="reassign all" name="eventSubmit_doReassignall" />&#160;<sup>|</sup>&#160;<input type="submit" value="save query" name="eventSubmit_doSavequery" /></p>
 	
 	<h3>Search Results</h3>
 
@@ -40,7 +41,7 @@
          #else 
             <tr class="b">
          #end
-		<td><input type="checkbox" /></td>
+		<td><input type="checkbox" name="selected_$issue.IssueId" /></td>
 		<td><a href="$issueLink">$issue.UniqueId</a></td>
 #foreach( $userAttribute in $user.getAttributesForIssueList($module))
     <td>
@@ -58,11 +59,11 @@
 #end
 		</table>
 	</div>
-	<div class="misc">issues per page:&#160; <input type="radio" name="issue_limit" value="25"/> 25 <input type="radio" name="issue_limit" value="50"/> 50 <input type="radio" name="issue_limit" value="50"/> 75 <input type="radio" name="issue_limit" value="100"/> 100&nbsp; <input type="submit" name="eventSubmit_doSearch" value="Refresh"></div>
+	<div class="misc">issues per page:&#160; <input type="radio"  value="25"/> 25 <input type="radio"  value="50"/> 50 <input type="radio"  value="50"/> 75 <input type="radio"  value="100"/> 100&nbsp; <input type="submit" name="eventSubmit_doSearch" value="Refresh"></div>
 
-<p class="functnbar"><input type="submit" value="view selected (verbose)" />&#160;<input type="submit" value="view all (verbose)" /></p>
+<p class="functnbar"><input type="submit" value="view selected (verbose)" name="eventSubmit_doViewselected" name="eventSubmit_doViewselected" />&#160;<input type="submit" value="view all (verbose)" name="eventSubmit_doViewall" /></p>
 
-<p class="functnbar"><input type="submit" value="reassign selected" />&#160;<sup>|</sup>&#160;<input type="submit" value="reassign all" />&#160;<sup>|</sup>&#160;<input type="submit" value="save query" name="eventSubmit_doSavequery" /></p>
+<p class="functnbar"><input type="submit" value="reassign selected" name="eventSubmit_doReassignselected" />&#160;<sup>|</sup>&#160;<input type="submit" value="reassign all" name="eventSubmit_doReassignall" />&#160;<sup>|</sup>&#160;<input type="submit" value="save query" name="eventSubmit_doSavequery" /></p>
 	
 	<div class="misc"><a href="#">&laquo;</a> <a href="#">previous</a> | 3 of 5 | <a href="#">next</a> <a href="#">&raquo;</a> (<a href="ConfigureIssueList.vm">add/remove attributes from view</a>)</div>
 $intake.declareGroups()
