--- a/src/templates/screens/secure/MoveIssue.vm
+++ b/src/templates/screens/secure/MoveIssue.vm
@@ -4,6 +4,8 @@
 #set ( $issueId = $data.Parameters.getString("id") )
 #set ( $issue = $scarabR.getIssue($issueId) )
 
+
+
 <div class="app" id="div2-6-1">
 <h2>copy / move issue (2.7.0) step 2</h2>
 
@@ -44,10 +46,11 @@
           <p>
           <select name="module_id">
              <option>select project</option>
-          #foreach( $module in $user.Modules )
+          #foreach( $module in $security.getModules($user, "Issue | Enter") )
               #if ($module.ModuleId != $currentModule.ModuleId )
                   <option value="$module.ModuleId">$module.Name</option>
               #end
+
           #end
                  </select>
           </p>
